--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ NODE_ENV=development
 PORT=3002
 
 # Elasticsearch Configuration
-ELASTICSEARCH_HOST=localhost
+ELASTICSEARCH_HOST=35.219.6.224
 ELASTICSEARCH_PORT=9400
 ELASTICSEARCH_PROTOCOL=http
 
