--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
         "setup:indices": "node scripts/setup-indices.js",
         "seed:products": "node scripts/seed-products.js",
         "sync:eurekabookhouse": "node scripts/sync-eurekabookhouse.js",
+        "generate:models": "node scripts/generate-models.js",
+        "generate:models:siplah": "node scripts/generate-models-siplah.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
@@ -20,7 +22,10 @@
         "cors": "^2.8.5",
         "dotenv": "^17.2.3",
         "express": "^5.1.0",
+        "multer": "^1.4.5-lts.1",
         "mysql2": "^3.15.3",
+        "sequelize": "^6.35.2",
+        "sequelize-auto": "^0.8.8",
         "swagger-jsdoc": "^6.2.8",
         "swagger-ui-express": "^5.0.1"
     },
