--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
     app:
         image: elastic-eureka
@@ -10,21 +8,20 @@ services:
         ports:
             - "3002:3002"
         environment:
-            - NODE_ENV=development
-            - PORT=3002
-            - ELASTICSEARCH_HOST=elasticsearch
-            - ELASTICSEARCH_PORT=9200
-            - ELASTICSEARCH_PROTOCOL=http
-            - API_PREFIX=/api/v1
-            - DB_HOST=35.219.24.215
-            - DB_NAME=lkpp_siplah2019
-            - DB_USER=Siplah2025
-            - DB_PASS=@SipLah2025!
-            - DB_DIALECT=mysql
+            NODE_ENV: development
+            PORT: 3002
+            ELASTICSEARCH_HOST: elasticsearch
+            ELASTICSEARCH_PORT: 9200
+            ELASTICSEARCH_PROTOCOL: http
+            API_PREFIX: /api/v1
+            DB_HOST: 35.219.24.215
+            DB_NAME: lkpp_siplah2019
+            DB_USER: Siplah2025
+            DB_PASS: "@SipLah2025!"
+            DB_DIALECT: mysql
         volumes:
-            # PENTING: agar hasil generate model muncul di lokal
             - .:/usr/src/app
-        command: npm run dev
+        command: sh -c "npm install && npm run dev"
         depends_on:
             - elasticsearch
         networks:
@@ -35,9 +32,9 @@ services:
         image: docker.elastic.co/elasticsearch/elasticsearch:8.11.3
         container_name: elasticsearch
         environment:
-            - discovery.type=single-node
-            - xpack.security.enabled=false
-            - "ES_JAVA_OPTS=-Xms256m -Xmx256m"
+            discovery.type: single-node
+            xpack.security.enabled: "false"
+            ES_JAVA_OPTS: "-Xms256m -Xmx256m"
         ports:
             - "9400:9200"
         networks:
@@ -48,13 +45,12 @@ services:
         image: docker.elastic.co/kibana/kibana:8.11.3
         container_name: kibana
         environment:
-            - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
-            - xpack.security.enabled=false
+            ELASTICSEARCH_HOSTS: http://elasticsearch:9200
+            xpack.security.enabled: "false"
         ports:
             - "5601:5601"
         depends_on:
-            elasticsearch:
-                condition: service_healthy
+            - elasticsearch
         networks:
             - elastic-network
         restart: unless-stopped
@@ -62,7 +58,3 @@ services:
 networks:
     elastic-network:
         driver: bridge
-
-volumes:
-    elasticsearch-data:
-        driver: local
