--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,11 +19,11 @@ services:
         depends_on:
             elasticsearch:
                 condition: service_started
-        healthcheck:
-            test: ["CMD", "curl", "-f", "http://localhost:${PORT}/health"]
-            interval: 30s
-            timeout: 5s
-            retries: 3
+        # healthcheck:
+        #     test: ["CMD", "curl", "-f", "http://localhost:${PORT}/health"]
+        #     interval: 30s
+        #     timeout: 5s
+        #     retries: 3
         networks:
             - elastic-network
         restart: unless-stopped
